--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -6,10 +6,12 @@
 </head>
 <body>
     <h1>xxx系统登录</h1>
-    <form action="/login" method="post">
-        <span>用户名称</span><input type="text" name="username" /> <br>
-        <span>用户密码</span><input type="password" name="password" /> <br>
-        <input type="submit" value="登陆">
+    <form method="post" action="/login">
+        <span>用户名称</span><input type="text" name="username"/> <br>
+        <span>用户密码</span><input type="password" name="password"/> <br>
+        <input type="submit"  value="登陆">
+        <label><input type="checkbox" name="remember-you"/>记住密码</label>
     </form>
 </body>
+
 </html>
