--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -10,7 +10,7 @@
         <span>用户名称</span><input type="text" name="username"/> <br>
         <span>用户密码</span><input type="password" name="password"/> <br>
         <input type="submit"  value="登陆">
-        <label><input type="checkbox" name="remember-you"/>记住密码</label>
+        <label><input type="checkbox" name="remember-me"/>记住密码</label>
     </form>
 </body>
 
