--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -9,9 +9,20 @@
     <form method="post" action="/login">
         <span>用户名称</span><input type="text" name="username"/> <br>
         <span>用户密码</span><input type="password" name="password"/> <br>
+        <span>验证码</span><input type="text" name="captchaCode" id="captchaCode"/>
+        <img src="/kaptcha" id="kaptcha" width="110px" height="40px"/><br>
         <input type="submit"  value="登陆">
         <label><input type="checkbox" name="remember-me"/>记住密码</label>
     </form>
 </body>
 
+
+<script>
+    window.onload=function(){
+        var kaptchaImg = document.getElementById("kaptcha");
+        kaptchaImg.onclick = function(){
+            kaptchaImg.src = "/kaptcha?" + Math.floor(Math.random() * 100)
+        }
+    }
+</script>
 </html>
