--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -3,26 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/qs/6.9.4/qs.js"></script>
 </head>
 <body>
-    <h1>xxx系统登录</h1>
-    <form method="post" action="/login">
-        <span>用户名称</span><input type="text" name="username"/> <br>
-        <span>用户密码</span><input type="password" name="password"/> <br>
-        <span>验证码</span><input type="text" name="captchaCode" id="captchaCode"/>
-        <img src="/kaptcha" id="kaptcha" width="110px" height="40px"/><br>
-        <input type="submit"  value="登陆">
-        <label><input type="checkbox" name="remember-me"/>记住密码</label>
-    </form>
+<h1>xxx系统登录</h1>
+<form action="/smslogin" method="post">
+    <span>手机号码：</span><input type="text" name="mobile" id="mobile"> <br>
+    <span>短信验证码：</span><input type="text" name="smsCode" id="smsCode" >
+    <input type="button" onclick="getSmsCode()" value="获取"><br>
+    <input type="button" onclick="smslogin()" value="登陆">
+</form>
+
 </body>
 
 
 <script>
-    window.onload=function(){
-        var kaptchaImg = document.getElementById("kaptcha");
-        kaptchaImg.onclick = function(){
-            kaptchaImg.src = "/kaptcha?" + Math.floor(Math.random() * 100)
-        }
+    let mobile = document.getElementById("mobile");
+    let smsCode = document.getElementById("smsCode");
+
+    function getSmsCode() {
+        axios({
+            method: 'get',
+            url: '/smscode',
+            params: {
+                "mobile": mobile.value
+            },
+            headers: {
+                'Content-Type': 'application/x-www-form-urlencoded'
+            }
+        }).then(resp => {
+                alert(resp.data.info)
+        }).catch(resp => {
+             console.log(resp)
+        });
+
+    }
+    function smslogin() {
+        axios({
+            method: 'POST',
+            url: '/smslogin',
+            data: {
+                "mobile": mobile.value,
+                "smsCode": smsCode.value
+            },
+            headers: {
+                'Content-Type': 'application/x-www-form-urlencoded; charset=UTF-8'
+            },
+            transformRequest: [function(data) {      //在请求之前对data传参进行格式转换
+                data = Qs.stringify(data)
+                return data
+            }]
+        }).then(resp => {
+            if(resp.data.status===200){
+                location.href = resp.data.url
+            }else {
+                alert(resp.data.info)
+            }
+        }).catch(resp => {
+            console.log(resp)
+        });
+
     }
 </script>
 </html>
